...
          component={LogScreen}
          options={{
            tabBarIcon: ({ color, size }) => <BarChart3 color={color} size={size} />,
          }}
        />
        <Tab.Screen
          name="START"
          component={StartScreen}
          options={{
            tabBarIcon: ({ color, size }) => (
              <PlusCircle color={color} size={size * 1.5} />
            ),
            tabBarLabel: 'START',
...
